[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Lowercase.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Capital.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MainScript.gd" type="Script" id=3]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 302.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LetterContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/LetterContainer"]
margin_right = 338.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/VBoxContainer/LetterContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 6

[node name="MarginContainer4" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/LetterContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 1024.0
margin_bottom = 302.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/TextBoxContainer"]
margin_right = 338.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="Panel/VBoxContainer/VBoxContainer/TextBoxContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true
caret_blink = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/TextBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 306.0
margin_right = 1024.0
margin_bottom = 310.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 314.0
margin_right = 1024.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="Answer" type="RichTextLabel" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_right = 510.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Count" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Correct: 0/0"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 342.0
margin_right = 1024.0
margin_bottom = 346.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 350.0
margin_right = 1024.0
margin_bottom = 591.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 506.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 506.0
margin_bottom = 14.0
text = "Uppercase"

[node name="CapitalsList" type="ItemList" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 506.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
max_columns = 4
same_column_width = true
fixed_icon_size = Vector2( 32, 32 )
script = ExtResource( 2 )

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 241.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 506.0
margin_bottom = 14.0
text = "Lowercase"

[node name="LowercaseList" type="ItemList" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 506.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
max_columns = 4
same_column_width = true
fixed_icon_size = Vector2( 32, 32 )
script = ExtResource( 1 )

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 595.0
margin_right = 1024.0
margin_bottom = 599.0
size_flags_horizontal = 3

[connection signal="gui_input" from="Panel/VBoxContainer/VBoxContainer/TextBoxContainer/TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="multi_selected" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer2/CapitalsList" to="." method="_on_CapitalsList_multi_selected"]
[connection signal="multi_selected" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/LowercaseList" to="." method="_on_LowercaseList_multi_selected"]
